https://trello.com/c/s7xdTBGz/494-ui-header: Ensure height of collapsed menu aligned with LHS.

--- a/ckanext/bpatheme/fanstatic/styles/bpatheme.css
+++ b/ckanext/bpatheme/fanstatic/styles/bpatheme.css
@@ -547,6 +547,10 @@ body {
   /*  display: none;*/
   /*}*/
 
+  .site-title .topnav {
+    padding-bottom: 50px;
+  }
+
   .topnav a {
     display: none;
   }
